spade-tests/src/snapshots/spade_tests__typeinference__unknown_type_level_constants_are_reported_nicely.snap
---
source: spade-tests/src/typeinference.rs
snapshot_kind: text
---
fn test<#uint V, #uint N>() -> uint<8> {
    V
}

fn tester() -> uint<8> {
    test::<_, 1>()
}


error: This type level value is not fully known
  ┌─ testinput:2:5
  │
2 │     V
  │     ^ Unknown type level value
  │
  = The error is in a generic unit instantiated at
    ╰ testinput:6 test<_, 1>
